- Fixed fullscreen on mobile devices

--- a/less/genealogy.less
+++ b/less/genealogy.less
@@ -1,6 +1,6 @@
 @import "mixins/transform.less";
 
-@container-w: 92vw;
+@container-w: 96vw;
 @container-h: 84vh;
 
 @menu-w: 25%;
@@ -39,6 +39,8 @@
 
     .tree-holder {
         position: relative;
+        width: 100%;
+        float: left;
 
         .alert {
             /*            position: absolute;
@@ -298,7 +300,7 @@ a.disabled, a[disabled] {
             .info-card{
                 display: none !important;
             }
-            
+
             &.male {
                 &.dead {
                     background-color: @color-bg-male;
@@ -350,5 +352,21 @@ a.disabled, a[disabled] {
                 display: none;
             }
         }
+    }
+}
+
+@media only screen and (max-width: 760px) {
+    .fullscreen-div { 
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        max-width: 100%;
+        max-height: 100%;
+        z-index: 9999;
     }
 }
